# qreals

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  RELEASING.md  gen_operations_json.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
binder/: requirements.txt
docs/: CORRECTNESS.md  REFERENCES.md  api.md  cert-critique-and-spec.md  index.md  math.md  quickstart.md
docs/cert-samples/: _build_samples.py  arith_mul-qreals-certificate-real-1-2-12.tex  arith_mul.txt  coeffs_rational-qreals-certificate-real-333-106-12.tex  coeffs_rational.txt  fingerprint-qreals-certificate-real-pi-12.tex  laurent-qreals-certificate-real-sqrt-2--13.tex  laurent.txt  locked-qreals-certificate-real-pi-4.tex  locked.txt  negation-qreals-certificate-real-sqrt-2--12.tex  negation.txt  qint-qreals-certificate-qint-5.tex  qint.txt  radius-qreals-certificate-real-pi-24.tex  radius.txt  rational-qreals-certificate-rational-333-106.tex  rational.txt  readouts.txt
example/: run_example.py
notebooks/: quickstart.ipynb
notes/: input-output-matrix-audit.md  pi-minus-2-zero-run-resolution.md
src/qreals/: __init__.py  __main__.py  _frieze.py  _parsing.py  app.py  arithmetic.py  bricks.py  certificate.py  coefficients.py  collapse.py  conjectures.py  continued_fraction.py  deficit.py  denom.py  expansions.py  exports.py  factor.py  features.py  formatter.py  gosper.py  jumpgap.py  negate.py  oeis.py  provenance.py  q_sum.py  qint_factor.py  qrat_exact.py  qreal.py  rational.py  refs.py  series.py  serve.py  store.py  transfer.py  truncated.py  verify.py
src/qreals/web/: app.css  app.js  template.html
tests/: conftest.py  test_app.py  test_arithmetic.py  test_certificate.py  test_deficit.py  test_doctor.py  test_expansions.py  test_exports.py  test_features.py  test_gosper.py  test_jumpgap.py  test_matrix.py  test_mgo_paper.py  test_oeis.py  test_properties.py  test_q_sum.py  test_qint_factor.py  test_qreal.py  test_rational.py  test_refs.py  test_series.py  test_store.py  test_truncated.py  test_verify.py
